# transactions-report-xmliser

./: README.md  pyproject.toml
example_data/: transaction_data.csv  transaction_data.xml
src/: cli.py  data_enrichment.py  logic.py  utils.py
